2003-02-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/drill.c: Added patch from Dan McMahill since + sign
	  before coordinates seemed to confuse the drill parser.
	  Closes bug #678407.

	* src/gerbv.c: Now you can move around layers in the right
	  sidebar so you can select in which order the layers should 
	  be presented.

	* src/draw.c, src/drill.c, src/gerb_image.[hc], src/gerber.c:
	  A new system to keep track of mm and inches. Everything is
	  still drawn based on inches and min/max is also stored as
	  inches. But now every aperture and every coordinate has a 
	  unit attached to it that is used when drawing. I hope I 
	  haven't breaked anything, patricular in drill.c. And I have
	  very few (one) reference examples in millimeters.

2003-01-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/log.[hc], src/gerbv.c: Made sure error messages are 
	  directed to the right place (shell and popup) at the
	  right moment and that the error messages look nicer.

	* .cvsignore, man/.cvsignore, scheme/.cvsignore, src/.cvsignore:
	  Added these files submitted by Holger Waechtler. Thanks!

2003-01-25  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c, src/gerb_image.[hc]: Added a patch from
	  Holger Waechtler regarding G70/G71 which opened up a whole
	  can of worms. After thinking and hacking the following works:
	  * all in inches (as always).
	  * apertures in inches and vectors in millimeters.
	  The reason for not fixing apertures in millimeter are because
	  the calculation must happen in the drawing engine, since we
	  don't know until the moment of drawing if the paramters defines
	  a length or an angle. It's probably just a matter of fixing the
	  scaling when drawing, but I fix that later on.

2003-01-19  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Fixed bug in arc/circle drawing that caused
	  some odd cases (not noticed so far elsewhere) that made
	  ccw arcs to be drawn cw. Discovered by Jukka Marin. Thanks.
