@@ -1,3 +1,7 @@
+2003-02-06  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c: Added swap of tooltips information too.
+
 2003-02-02  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/drill.c: Added patch from Dan McMahill since + sign
